# sandbox-cli

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  sandbox.py
.claude/: settings.json
.claude/agents/: dockerfile-sandbox.md
.claude/hooks/: on-stop.sh  post-push.sh
docs/reviews/: 2026-03-19-provider-support-task-review.md
docs/superpowers/specs/: 2026-03-17-background-task-mode.md  2026-03-19-gemini-provider.md  2026-03-19-provider-support.md  2026-03-23-modal-remote-runtime-research.md  2026-03-23-modal-remote-runtime.md
docs/task-runs/: gemini-provider-decisions.md  provider-support-decisions.md
docs/tasks/: gemini-provider.md  provider-support.md
sandbox_cli/: Dockerfile  __init__.py
sandbox_cli/docs/: operations-guide.md  prompt-guide.md
sandbox_cli/scripts/: modal_runner.sh  watch-ci.sh
scripts/: watch-ci.sh
tests/: test_background.py  test_build.py  test_claude_integration.py  test_codex_integration.py  test_gemini_integration.py  test_integration.py  test_lifecycle.py  test_modal_integration.py  test_provider.py  test_read.py  test_remote.py  test_rm.py  test_sandbox.py  test_sandbox_integration.py  test_start.py  test_utils.py
