[project]
name = "sandbox-cli"
version = "0.1.0"
description = "Run Claude Code in isolated Docker containers with git worktrees"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
sandbox = "sandbox_cli:cli"

[tool.setuptools.package-data]
sandbox_cli = ["Dockerfile", "scripts/*", "docs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
